--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://MdGolamMostafa.github.io/client-doctors-portal",
   "name": "client-doctors-portal",
   "version": "0.1.0",
   "private": true,
@@ -21,7 +22,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-     "predeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
