doctor part added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "http://MdGolamMostafa.github.io/client-doctors-portal",
   "name": "client-doctors-portal",
   "version": "0.1.0",
   "private": true,
